Changes since version 1.1.0
---------------------------

- Major Freeze update
  See corresponding entry in the Ice CHANGES file.

- Added Ice.MessageSizeMax property. This property controls the maximum
  message size accepted by the Ice protocol in kiloBytes. The default value
  is 1024 (1 MB).

- Fixed a number of incorrect property settings in the config files
  for the demos.

- Changed the return type of the ice_invoke_async method in
  Ice.BlobjectAsync to void instead of boolean.

- Fixed a bug where the operation mode argument wasn't used in the
  implementation of the Ice.ObjectPrx ice_invoke method.

- Fixed a bug in the generated code for custom sequences so that
  it now checks whether the sequence value is null.

- Added new property: Ice.Trace.Slicing. When set to a value > 0,
  unknown exception and class types that are sliced emit a warning.

- Added destroyOnInterrupt() to the Application
  class. destroyOnInterrupt() is now the default behavior, because
  shutdownOnInterrupt() only shuts down the server side of an
  application, and therefore doesn't work with pure clients.

- ObjectAdapter::removeServantLocator() no longer exists.
  The life cycle of servant locators that are registered
  with an object adapter ends when the adapter is destroyed.

- Changed Ice::ServantLocator::deactivate to be passed the category for
  which a servant locator is being deactivated.

- Added missing declaration for ice_invoke_async to Ice.ObjectPrx.

- Added saveObject() operation on Evictor, and savedObject() operation
  on PersistenceStrategy.

  saveObject() saves a persistent object immediately. Once an operation
  has called saveObject(), the object is considered "clean": other
  updates by the same operation can only be reliably saved by another
  call to saveObject().

- Added a test to the property parsing code to print a warning on
  System.err if a property is not recognized. This prevents silly typos,