@@ -754,6 +754,13 @@ public final class Connection extends EventHandler
     //
     // Operations from EventHandler
     //
+
+    public boolean
+    datagram()
+    {
+       return _endpoint.datagram();
+    }
+
     public boolean
     readable()
     {
