@@ -17,6 +17,11 @@ package IceInternal;
 abstract class EventHandler
 {
     //
+    // Return true if the handler is for a datagram transport, false otherwise.
+    //
+    abstract public boolean datagram();
+
+    //
     // Return true if read() must be called before calling message().
     //
     abstract public boolean readable();
