@@ -301,7 +301,7 @@ public class Instance
 	    final int num = _properties.getPropertyAsIntWithDefault("Ice.MessageSizeMax", defaultMessageSizeMax);
 	    if(num < 1)
 	    {
-		_messageSizeMax = defaultMessageSizeMax; // Ignore stupid values.
+		_messageSizeMax = defaultMessageSizeMax * 1024; // Ignore stupid values.
 	    }
 	    else if(num > 0x7fffffff / 1024)
 	    {
