@@ -56,8 +56,14 @@ final class UdpTransceiver implements Transceiver
         java.nio.ByteBuffer buf = stream.prepareWrite();
 
         assert(buf.position() == 0);
-        final int packetSize = 64 * 1024; // TODO: configurable
-        assert(packetSize >= buf.limit()); // TODO: exception
+        final int packetSize = java.lang.Math.min(_maxPacketSize, _sndSize - _udpOverhead);
+        if(packetSize < buf.limit())
+	{
+	    //
+	    // We don't log a warning here because the client gets an exception anyway.
+	    //
+	    throw new Ice.DatagramLimitException();
+	}
 
         while(buf.hasRemaining())
         {
@@ -94,7 +100,19 @@ final class UdpTransceiver implements Transceiver
 	// TODO: Timeouts are ignored!!
 
         assert(stream.pos() == 0);
-        final int packetSize = 64 * 1024; // TODO: configurable
+        final int packetSize = java.lang.Math.min(_maxPacketSize, _rcvSize - _udpOverhead);
+	if(packetSize < stream.size())
+	{
+	    //
+	    // We log a warning here because this is the server side -- without the
+	    // the warning, there would only be silence.
+	    //
+	    if(_warn)
+	    {
+		_logger.warning("DatagramLimitException: maximum size of " + packetSize + " exceeded");
+	    }
+	    throw new Ice.DatagramLimitException();
+	}
         stream.resize(packetSize, true);
         java.nio.ByteBuffer buf = stream.prepareRead();
         buf.position(0);
@@ -194,10 +212,13 @@ final class UdpTransceiver implements Transceiver
         _logger = instance.logger();
         _incoming = false;
         _connect = true;
+	_warn = instance.properties().getPropertyAsInt("Ice.Warn.Datagrams") > 0;
+
 
         try
         {
             _fd = Network.createUdpSocket();
+	    setBufSize(instance);
             Network.setBlock(_fd, false);
             _addr = Network.getAddress(host, port);
             Network.doConnect(_fd, _addr, -1);
@@ -225,10 +246,13 @@ final class UdpTransceiver implements Transceiver
         _logger = instance.logger();
         _incoming = true;
         _connect = connect;
+	_warn = instance.properties().getPropertyAsInt("Ice.Warn.Datagrams") > 0;
+
 
         try
         {
             _fd = Network.createUdpSocket();
+	    setBufSize(instance);
             Network.setBlock(_fd, false);
             _addr = new java.net.InetSocketAddress(host, port);
 	    if(_traceLevels.network >= 2)
@@ -251,6 +275,86 @@ final class UdpTransceiver implements Transceiver
         }
     }
 
+    private synchronized void
+    setBufSize(Instance instance)
+    {
+        assert(_fd != null);
+
+	for(int i = 0; i < 2; ++i)
+	{
+	    String direction;
+	    String prop;
+	    int dfltSize;
+	    if(i == 0)
+	    {
+		direction = "receive";
+		prop = "Ice.UDP.RcvSize";
+		dfltSize = Network.getRecvBufferSize(_fd);
+		_rcvSize = dfltSize;
+	    }
+	    else
+	    {
+		direction = "send";
+		prop = "Ice.UDP.SndSize";
+		dfltSize = Network.getSendBufferSize(_fd);
+		_sndSize = dfltSize;
+	    }
+
+	    //
+	    // Get property for buffer size and check for sanity.
+	    //
+	    int sizeRequested = instance.properties().getPropertyAsIntWithDefault(prop, dfltSize);
+	    if(sizeRequested < _udpOverhead)
+	    {
+		_logger.warning("Invalid " + prop + " value of " + sizeRequested + " adjusted to " + dfltSize);
+		sizeRequested = dfltSize;
+	    }
+		
+	    //
+	    // Ice.MessageSizeMax overrides UDP buffer sizes if Ice.MessageSizeMax + _udpOverhead is less.
+	    //
+	    int messageSizeMax = instance.messageSizeMax();
+	    if(sizeRequested > messageSizeMax + _udpOverhead)
+	    {
+		int newSize = java.lang.Math.min(messageSizeMax, _maxPacketSize) + _udpOverhead;
+	        _logger.warning("UDP " + direction + " buffer size: request size of " + sizeRequested
+		                + " adjusted to " + newSize + " (Ice.MessageSizeMax takes precendence)");
+		sizeRequested = newSize;
+	    }
+
+	    if(sizeRequested != dfltSize)
+	    {
+		//
+		// Try to set the buffer size. The kernel will silently adjust
+		// the size to an acceptable value. Then read the size back to
+		// get the size that was actually set.
+		//
+		int sizeSet;
+		if(i == 0)
+		{
+		    Network.setRecvBufferSize(_fd, sizeRequested);
+		    _rcvSize = Network.getRecvBufferSize(_fd);
+		    sizeSet = _rcvSize;
+		}
+		else
+		{
+		    Network.setSendBufferSize(_fd, sizeRequested);
+		    _sndSize = Network.getSendBufferSize(_fd);
+		    sizeSet = _sndSize;
+		}
+
+		//
+		// Warn if the size that was set is less than the requested size.
+		//
+		if(sizeSet < sizeRequested)
+		{
+		    _logger.warning("UDP " + direction + " buffer size: requested size of "
+			            + sizeRequested + " adjusted to " + sizeSet);
+		}
+	    }
+	}
+    }
+
     protected void
     finalize()
         throws Throwable
@@ -263,6 +367,16 @@ final class UdpTransceiver implements Transceiver
     private Ice.Logger _logger;
     private boolean _incoming;
     private boolean _connect;
+    private boolean _warn;
+    private int _rcvSize;
+    private int _sndSize;
     private java.nio.channels.DatagramChannel _fd;
     private java.net.InetSocketAddress _addr;
+
+    //
+    // The maximum IP datagram size is 65535. Subtract 20 bytes for the IP header and 8 bytes for the UDP header
+    // to get the maximum payload.
+    //
+    private final static int _udpOverhead = 20 + 8;
+    private final static int _maxPacketSize = 65535 - _udpOverhead;
 }
